- Fix node form fieldsets being broken in IE after Safari/Konqueror fix.

--- a/misc/drupal.css
+++ b/misc/drupal.css
@@ -171,7 +171,10 @@ tr.light .form-item, tr.dark .form-item {
   display: block;
   width: 95%;
 }
-
+* html .node-form fieldset {
+/* Note: IE-only CSS due to "* html". Sadly required for fieldsets to appear correctly. */
+  display: inline;
+}
 .node-form .admin .form-item .title {
   margin-top: 0;
 }
